@@ -25,14 +25,14 @@
 		      <p>&nbsp;</p>
 		    </div>
 			<ul>
-			  <li><a href="download/OpenRemote_Controller.zip">Controller Pro v1.4.1</a>
+			  <li><a href="download/OpenRemote_Controller.zip">Controller Pro v1.5.0</a>
 			  <p class="{style.linkComment}">Pro Controller package. Contains a tomcat server with the OpenRemote Controller and WebConsole deployed.</p></li>
-			  <li><a href="download/voyage_ebox_v1.4.1_20160208.img.zip">eBox image v1.4.1</a>
+			  <li><a href="download/voyage_ebox_v1.5.0_20160422.img.zip">eBox image v1.5.0</a>
 			  <p class="{style.linkComment}">CF/SD card image to use on eBox 3310</p>
 			  </li>
 			</ul>
 			<div>&nbsp;</div>
-			<div>For more information, please consult <a href="http://www.openremote.com/support/ipcontroller">Controller of Things</a></div>
+			<div>For more information about installing the controller, please refer to our "<a href='http://www.openremote.com/install-the-controller'>Getting Started</a>" guide.</div>
 			<div>&nbsp;</div>
 			<div>
 				<g:Button ui:field="okButton" styleName="{style.centeredButton}">OK</g:Button>
